default/objects/NVMStatsSF__CDR_NVM__c/NVMStatsSF__CDR_NVM__c.object-meta.xml
<CustomObject>
    <description>Contains event details from Inbound Calls and Cases.  This Table operates in 2 modes based on the Record Type - either as a landing table for imported CDRs or as a detail table if CDR explosion on - it is OFF by default</description>
    <label>Call Event</label>
    <nameField>
        <displayFormat>CDR-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>