default/objects/NVMStatsSF__CDR_NVM__c/fields/NVMStatsSF__Applet_Name__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Applet_Name__c</fullName>
    <label>Applet Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>