default/objects/NVMStatsSF__CDR_NVM__c/fields/NVMStatsSF__CallGuid__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__CallGuid__c</fullName>
    <label>CallGuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>