default/objects/NVMStatsSF__CDR_NVM__c/fields/NVMStatsSF__CDR_Lookup__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__CDR_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NVM Call Summary</label>
    <referenceTo>NVMStatsSF__NVM_Call_Summary__c</referenceTo>
    <relationshipName>Call_Detail_Records</relationshipName>
    <type>Lookup</type>
</CustomField>