default/objects/NVMStatsSF__CDR_NVM__c/fields/NVMStatsSF__CLID__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__CLID__c</fullName>
    <label>CLID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>