default/objects/NVMStatsSF__CDR_NVM__c/fields/NVMStatsSF__Data1__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Data1__c</fullName>
    <label>Data1</label>
    <length>70</length>
    <type>Text</type>
</CustomField>