default/objects/NVMStatsSF__CDR_NVM__c/fields/NVMStatsSF__Data2__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Data2__c</fullName>
    <label>Data2</label>
    <length>70</length>
    <type>Text</type>
</CustomField>