default/objects/NVMStatsSF__CDR_NVM__c/fields/NVMStatsSF__Data_TelNum__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Data_TelNum__c</fullName>
    <label>TelNum</label>
    <length>50</length>
    <type>Text</type>
</CustomField>