default/objects/NVMStatsSF__CDR_NVM__c/fields/NVMStatsSF__Delete_Record__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Delete_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Record</label>
    <type>Checkbox</type>
</CustomField>