default/objects/NVMStatsSF__CDR_NVM__c/fields/NVMStatsSF__Description__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>