default/objects/NVMStatsSF__CDR_NVM__c/fields/NVMStatsSF__Event__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Event__c</fullName>
    <label>Event</label>
    <length>30</length>
    <type>Text</type>
</CustomField>