default/objects/NVMStatsSF__CDR_NVM__c/fields/NVMStatsSF__Seq__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Seq__c</fullName>
    <label>Seq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>