default/objects/NVMStatsSF__CDR_NVM__c/fields/NVMStatsSF__Server__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Server__c</fullName>
    <label>Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>