default/objects/NVMStatsSF__CDR_NVM__c/fields/NVMStatsSF__Service_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Service_Telephone_Number__c</fullName>
    <label>Service Telephone Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>