default/objects/NVMStatsSF__CDR_NVM__c/fields/NVMStatsSF__State__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__State__c</fullName>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>