default/objects/NVMStatsSF__CDR_NVM__c/listViews/NVMStatsSF__All.listView-meta.xml
<ListView>
    <fullName>NVMStatsSF__All</fullName>
    <columns>NAME</columns>
    <columns>NVMStatsSF__Time__c</columns>
    <columns>NVMStatsSF__CallGuid__c</columns>
    <columns>NVMStatsSF__Seq__c</columns>
    <columns>NVMStatsSF__Event__c</columns>
    <columns>NVMStatsSF__Description__c</columns>
    <columns>NVMStatsSF__Duration__c</columns>
    <columns>NVMStatsSF__CDR_Lookup__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>